@@ -47,9 +47,9 @@ KeepDataFilesAlliances=true
 ;Disable or Enable MOTD on server startup
 MOTD=false
 ;MOTD Message to broadcast to player when they enter the galaxy
-MOTDMessage='TESTING MOTD MESSAGE'
+MOTDMessage='Message of the Day!'
 ;A message to broadcast to the server, use MessageInterval and MessageOrder to set when to brodcast.
-MessageOne=''
+MessageOne='Thanks for playing on the server.'
 ;A message to broadcast to the server, use MessageInterval and MessageOrder to set when to brodcast.
 MessageTwo=''
 ;A message to broadcast to the server, use MessageInterval and MessageOrder to set when to brodcast.
